--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # Note: Order is important; the last matching pattern takes the most precedence.
 
 # Default reviewers:
-* @wadevries @153957
+* @ramonakira @rvanleeuwen-leukeleu @wadevries @153957
