--- a/packages/hidp_django_admin/pyproject.toml
+++ b/packages/hidp_django_admin/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
     { name = "Robin van Leeuwen", email = "rvanleeuwen@leukeleu.nl" },
 ]
 dependencies = [
-    "django-hidp>=1.4.0,<2",
+    "django-hidp>=1.5.0,<2",
 ]
 readme = "README.md"
 license = "BSD-3-Clause"
@@ -30,7 +30,7 @@ Issues = "https://github.com/leukeleu/django-hidp-django-admin/issues"
 Releasenotes = "https://github.com/leukeleu/django-hidp-django-admin/releases"
 
 [tool.setuptools_scm]
-# can be empty if no extra settings are needed, presence enables setuptools-scm
+root = "../.."
 
 [tool.setuptools]
 packages = ["hidp_django_admin"]
