--- a/packages/hidp_django_admin/MANIFEST.in
+++ b/packages/hidp_django_admin/MANIFEST.in
@@ -1,7 +1,7 @@
 include Makefile
 include requirements_dev.txt
 include .editorconfig
-recursive-include docs *.md
+recursive-include hidp_django_admin *.md
 recursive-include hidp_django_admin/templates *.html *.txt
 global-exclude *.lock
 global-exclude __pycache__
